--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "com.google.android.material:material:1.4.0-alpha01"
+
+    implementation 'com.github.kittinunf.fuel:fuel:2.2.0'
+
+    implementation 'com.beust:klaxon:5.0.1'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 
 }
