--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,8 @@
+//plugins {
+//    id("org.springframework.boot") version "2.0.2.RELEASE"
+//    id("io.spring.dependency-management") version "1.0.4.RELEASE"
+//}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -5,6 +10,10 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId "com.project.weatherapp"
@@ -39,12 +48,6 @@ dependencies {
 
     implementation 'com.github.kittinunf.fuel:fuel:2.2.0'
 
-    implementation 'com.beust:klaxon:5.0.1'
+    implementation 'io.github.microutils:kotlin-logging:1.12.5'
 
-
-    implementation 'com.google.code.gson:gson:2.8.6'
-
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
-
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-}
+    implementation 'com.google.android.gms:play-services-location:18.0.0'}
